# Xana

./: .gitattributes  .gitignore  CMakeLists.txt  Initial.sh  README.md
CMake/: Native.cmake
Include/Xana/: Xana.hpp
Include/Xana/XBase/: Object.hpp
Src/: CMakeLists.txt
Src/Xana/: Xana.cpp
cmake/: cross.cmake
include/: XShell.hpp
include/Xana/: Object.hpp  String.hpp  Xana.hpp
include/Xana/XBase/: Object.hpp  XBase.hpp
include/Xana/XCore/: XCore.hpp
src/: CMakeLists.txt  XShell.cpp
src/Xana/: CMakeLists.txt  Object.cpp  String.cpp
src/Xana/XBase/: Object.cpp  XBase.cpp
src/Xana/XCore/: XCore.cpp
src/Xana/test/: main.cpp
src/test/: main.cpp
